# thesis-data-lab

./: .gitignore  AGENTS.md  README.md  _quarto.yml  pyproject.toml  styles.css
assets/session_01/: mock_x_posts.csv
contribute/: IDEAS.md  PROJECT.md  quarto.md
data/metadata/: README.md
demo/: .env.example  .gitignore  AGENTS.md  README.md
demo/scripts/session_02/: 01-prepare_pwt_2023.py  02-describe_and_plot.py
demo/scripts/session_03/: 02-multiple_regression.py
docs/: index.html  search.json
docs/assets/: styles.css
docs/notes/: index.html
docs/notes/sessions/: session-01.html  session-02.html  session-03.html
docs/site_libs/bootstrap/: bootstrap-a25fe14d71fb15effab06e6c3a28be36.min.css
notes/: index.qmd
notes/sessions/: session-01.qmd  session-02.qmd  session-03.qmd
scripts/session_01/: 01-prepare_pwt.py  02-plot_pwt.py  clean_mock_posts.py  project_structure_check.py
scripts/session_02/: 03-regress.py  describe_and_plot.py
scripts/session_03/: 01-prepare_pwt_2023_oecd.py  02-multiple_regression.py
