[project]
name = "thesis-data-lab"
version = "0.1.0"
description = "卒論準備中の学部4年生向けデータ分析教材"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "linearmodels>=6.1",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "statsmodels>=0.14",
]

[tool.uv]
package = false
